完成mysql数据库初始化以及python-venv

--- a/backEnd/docs/部署和启动指南.md
+++ b/backEnd/docs/部署和启动指南.md
@@ -145,7 +145,7 @@ vi .env  # 或使用其他编辑器
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=your_mysql_password
+DB_PASSWORD=123456
 DB_NAME=rag_knowledge_base
 
 # JWT密钥（生产环境必须修改！）
